--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.1.3",
+    "@web3modal/wagmi": "^3.4.0",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.0",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "viem": "~1.16.3",
-    "wagmi": "~1.4.3"
+    "viem": "^1.19.11",
+    "wagmi": "^1.4.7"
   },
   "devDependencies": {
     "@types/node": "^18.16.12",
     "@types/react": "^18.2.21",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.4.19",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.0.4"
   }
 }
