--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.1.3",
+    "@vercel/analytics": "^1.1.1",
     "@web3modal/wagmi": "^3.4.0",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
